--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN="NjgwMDAwODY3OTgxOTgzNzgz.Xo5yLA.8s0yQDN0m3BKegtin62H_eGFJ28"
+TOKEN="NjgwMDAwODY3OTgxOTgzNzgz.Xo50GQ.Xz-5qw1_MEJ9CFqHkTV0tA8vmuY"
